Package_Tools/include-C/Ubuntu_26.04/gstreamer-1.0/gst/mpegts/gstmpegtsdescriptor.h

typedef struct _GstMpegtsDescriptor GstMpegtsDescriptor;
#define GST_TYPE_MPEGTS_DESCRIPTOR (gst_mpegts_descriptor_get_type())
GST_MPEGTS_API
GType gst_mpegts_descriptor_get_type (void);
/**
 * GstMpegtsRegistrationId:
 * @GST_MTS_REGISTRATION_0: Undefined registration id
 * @GST_MTS_REGISTRATION_AC_3: Audio AC-3, ATSC A/52
 * @GST_MTS_REGISTRATION_AC_4: Audio AC-4, ETSI 103 190-2
 * @GST_MTS_REGISTRATION_CUEI: SCTE 35, "Digital Program Insertion Cueing Message"
 * @GST_MTS_REGISTRATION_drac: Dirac Video codec
 * @GST_MTS_REGISTRATION_DTS1: DTS Audio
 * @GST_MTS_REGISTRATION_DTS2: DTS Audio
 * @GST_MTS_REGISTRATION_DTS3: DTS Audio
 * @GST_MTS_REGISTRATION_EAC3: Enhanced AC-3 (i.e. EAC3)
 * @GST_MTS_REGISTRATION_ETV1: Cablelabs ETV
 * @GST_MTS_REGISTRATION_BSSD: SMPTE 302M, Mapping of AES3 Data in mpeg-ts
 * @GST_MTS_REGISTRATION_GA94: ATSC A/53 compliant stream (i.e. ATSC)
 * @GST_MTS_REGISTRATION_HDMV: Blu-ray, "System Description Blu-ray Disc
 *             Read-Only Format part 3 Audio Visual Basic Specifications"
 * @GST_MTS_REGISTRATION_KLVA: SMPTE RP217 : Non-synchronized Mapping of KLV
 *             Packets in mpeg-ts
 * @GST_MTS_REGISTRATION_OPUS: Opus Audio
 * @GST_MTS_REGISTRATION_TSHV: HDV (Sony)
 * @GST_MTS_REGISTRATION_VC_1: Video VC-1, SMPTE RP227 "VC-1 Bitstream Transport Encodings"
 * @GST_MTS_REGISTRATION_OTHER_HEVC: HEVC / h265
 *
 * Well-known registration ids, expressed as native-endian 32bit integers. These
 * are used in descriptors of type %GST_MTS_DESC_REGISTRATION. Unless specified
 * otherwise (by use of the "OTHER" prefix), they are all registered by the
 * [SMPTE Registration Authority](https://smpte-ra.org/) or specified in
 * "official" documentation for the given format.
 *
 * Since: 1.20
 */

/**
 * GST_MPEGTS_REG_TO_UINT32: (skip) (attributes doc.skip=true)
 */
#define GST_MPEGTS_REG_TO_UINT32(a,b,c,d)((a) << 24 | (b) << 16 | (c) << 8 | (d))
#define GST_TYPE_MPEGTS_ISO_639_LANGUAGE (gst_mpegts_iso_639_language_get_type ())
GST_MPEGTS_API
GType gst_mpegts_iso_639_language_get_type (void);
#define GST_TYPE_MPEGTS_LOGICAL_CHANNEL_DESCRIPTOR (gst_mpegts_logical_channel_descriptor_get_type())
GST_MPEGTS_API
GType gst_mpegts_logical_channel_descriptor_get_type(void);
#define GST_TYPE_MPEGTS_LOGICAL_CHANNEL (gst_mpegts_logical_channel_get_type())
GST_MPEGTS_API
GType gst_mpegts_logical_channel_get_type(void);
/**
 * GST_TYPE_MPEGTS_METADATA_DESCRIPTOR:
 *
 * metadata_descriptor type
 *
 * Since: 1.24
 */
#define GST_TYPE_MPEGTS_METADATA_DESCRIPTOR (gst_mpegts_metadata_descriptor_get_type())
GST_MPEGTS_API
GType gst_mpegts_metadata_descriptor_get_type(void);
/**
 * gst_mpegts_pes_metadata_meta_api_get_type
 *
 * Return the #GType associated with #GstMpegtsPESMetadataMeta
 *
 * Returns: a #GType
 *
 * Since: 1.24
 */
GST_MPEGTS_API
GType gst_mpegts_pes_metadata_meta_api_get_type(void);
/**
 * GST_MPEGTS_PES_METADATA_META_API_TYPE:
 *
 * The #GType associated with #GstMpegtsPESMetadataMeta.
 *
 * Since: 1.24
 */
#define GST_MPEGTS_PES_METADATA_META_API_TYPE (gst_mpegts_pes_metadata_meta_api_get_type())
/**
 * GST_MPEGTS_PES_METADATA_META_INFO:
 *
 * The #GstMetaInfo associated with #GstMpegtsPESMetadataMeta.
 *
 * Since: 1.24
 */
#define GST_MPEGTS_PES_METADATA_META_INFO (gst_mpegts_pes_metadata_meta_get_info())
/**
 * gst_mpegts_pes_metadata_meta_get_info:
 *
 * Gets the global #GstMetaInfo describing the #GstMpegtsPESMetadataMeta meta.
 *
 * Returns: (transfer none): The #GstMetaInfo
 *
 * Since: 1.24
 */
GST_MPEGTS_API
const GstMetaInfo *gst_mpegts_pes_metadata_meta_get_info(void);
/**
 * GST_TYPE_MPEGTS_METADATA_POINTER_DESCRIPTOR
 *
 * Since: 1.26
 */
#define GST_TYPE_MPEGTS_METADATA_POINTER_DESCRIPTOR \
  (gst_mpegts_metadata_pointer_descriptor_get_type())
GST_MPEGTS_API
GType gst_mpegts_metadata_pointer_descriptor_get_type(void);
/* JPEG-XS descriptor */

/**
 * GstMpegtsJpegXsDescriptor:
 *
 * JPEG-XS descriptor
 *
 * Since: 1.26
 */

typedef struct _GstMpegtsJpegXsDescriptor {
  guint8 descriptor_version;
  guint16 horizontal_size, vertical_size;
  guint32 brat, frat;
  guint16 schar, Ppih, Plev;
  guint32 max_buffer_size;
  guint8 buffer_model_type;
  guint8 colour_primaries;
  guint8 transfer_characteristics;
  guint8 matrix_coefficients;
  gboolean video_full_range_flag;
  gboolean still_mode;
  gboolean mdm_flag;
  guint16 X_c0, Y_c0, X_c1, Y_c1, X_c2, Y_c2;
  guint16 X_wp, Y_wp;
  guint32 L_max, L_min;
  guint16 MaxCLL, MaxFALL;
} GstMpegtsJpegXsDescriptor;
/**
 * GST_TYPE_MPEGTS_JPEG_XS_DESCRIPTOR:
 *
 * Since: 1.26
 */
#define GST_TYPE_MPEGTS_JPEG_XS_DESCRIPTOR	\
  (gst_mpegts_jpeg_xs_descriptor_get_type())
GST_MPEGTS_API
GType gst_mpegts_jpeg_xs_descriptor_get_type(void);
GST_MPEGTS_API
gboolean
gst_mpegts_descriptor_parse_jpeg_xs(const GstMpegtsDescriptor *descriptor,
                                   GstMpegtsJpegXsDescriptor *res);
GST_MPEGTS_API
GstMpegtsDescriptor *
gst_mpegts_descriptor_from_jpeg_xs(const GstMpegtsJpegXsDescriptor *jpegxs);