Packages_2026/gstreamer-gst-1.28.2/gst/mpegts/gstmpegtsdescriptor.inc


type
  PGstMpegtsJpegXsDescriptor = ^TGstMpegtsJpegXsDescriptor;
  TGstMpegtsJpegXsDescriptor = record
    descriptor_version: Tguint8;
    horizontal_size: Tguint16;
    vertical_size: Tguint16;
    brat: Tguint32;
    frat: Tguint32;
    schar: Tguint16;
    Ppih: Tguint16;
    Plev: Tguint16;
    max_buffer_size: Tguint32;
    buffer_model_type: Tguint8;
    colour_primaries: Tguint8;
    transfer_characteristics: Tguint8;
    matrix_coefficients: Tguint8;
    video_full_range_flag: Tgboolean;
    still_mode: Tgboolean;
    mdm_flag: Tgboolean;
    X_c0: Tguint16;
    Y_c0: Tguint16;
    X_c1: Tguint16;
    Y_c1: Tguint16;
    X_c2: Tguint16;
    Y_c2: Tguint16;
    X_wp: Tguint16;
    Y_wp: Tguint16;
    L_max: Tguint32;
    L_min: Tguint32;
    MaxCLL: Tguint16;
    MaxFALL: Tguint16;
  end;

function gst_mpegts_jpeg_xs_descriptor_get_type: TGType; cdecl; external libgstmpegts;
function gst_mpegts_descriptor_parse_jpeg_xs(descriptor: PGstMpegtsDescriptor; res: PGstMpegtsJpegXsDescriptor): Tgboolean; cdecl; external libgstmpegts;
function gst_mpegts_descriptor_from_jpeg_xs(jpegxs: PGstMpegtsJpegXsDescriptor): PGstMpegtsDescriptor; cdecl; external libgstmpegts;

// === Konventiert am: 24-7-26 11:14:37 ===

function GST_MPEGTS_REG_TO_UINT32(a, b, c, d: byte): cardinal;

function GST_TYPE_MPEGTS_DESCRIPTOR: TGType;
function GST_TYPE_MPEGTS_ISO_639_LANGUAGE: TGType;
function GST_TYPE_MPEGTS_LOGICAL_CHANNEL_DESCRIPTOR: TGType;
function GST_TYPE_MPEGTS_LOGICAL_CHANNEL: TGType;
function GST_TYPE_MPEGTS_METADATA_DESCRIPTOR: TGType;
function GST_TYPE_MPEGTS_METADATA_POINTER_DESCRIPTOR: TGType;
function GST_TYPE_MPEGTS_JPEG_XS_DESCRIPTOR: TGType;
function GST_MPEGTS_PES_METADATA_META_API_TYPE: TGType;
function GST_MPEGTS_PES_METADATA_META_INFO: PGstMetaInfo;

{$ENDIF read_interface}


{$IFDEF read_implementation}

function GST_MPEGTS_REG_TO_UINT32(a, b, c, d: byte): cardinal; inline;
begin
  Result := (cardinal(a) shl 24) or (cardinal(b) shl 16) or (cardinal(c) shl 8) or cardinal(d);
end;

function GST_TYPE_MPEGTS_DESCRIPTOR: TGType;
begin
  Result := gst_mpegts_descriptor_get_type;
end;

function GST_TYPE_MPEGTS_ISO_639_LANGUAGE: TGType;
begin
  Result := gst_mpegts_iso_639_language_get_type;
end;

function GST_TYPE_MPEGTS_LOGICAL_CHANNEL_DESCRIPTOR: TGType;
begin
  Result := gst_mpegts_logical_channel_descriptor_get_type;
end;

function GST_TYPE_MPEGTS_LOGICAL_CHANNEL: TGType;
begin
  Result := gst_mpegts_logical_channel_get_type;
end;

function GST_TYPE_MPEGTS_METADATA_DESCRIPTOR: TGType;
begin
  Result := gst_mpegts_metadata_descriptor_get_type;
end;

function GST_MPEGTS_PES_METADATA_META_API_TYPE: TGType;
begin
  Result := gst_mpegts_pes_metadata_meta_api_get_type;
end;

function GST_MPEGTS_PES_METADATA_META_INFO: PGstMetaInfo;
begin
  Result := gst_mpegts_pes_metadata_meta_get_info;
end;

function GST_TYPE_MPEGTS_METADATA_POINTER_DESCRIPTOR: TGType;
begin
  Result := gst_mpegts_metadata_pointer_descriptor_get_type;
end;

function GST_TYPE_MPEGTS_JPEG_XS_DESCRIPTOR: TGType;
begin
  Result := gst_mpegts_jpeg_xs_descriptor_get_type;
end;

{$ENDIF read_implementation}
